[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['ah2ac2*']

[project]
name = "ah2ac2"
readme = "README.md"
description = "Ad-Hoc Human-AI Coordination Challenge"

dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "jaxmarl",
    "optax",
    "distrax",
    "flashbax==0.1.0",
    "wandb",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pettingzoo>=1.24.3",
    "tqdm>=4.66.0",
    "ruff",
    "pre-commit",
    "websockets",
    "huggingface_hub",
    "notebook",
    "python-dotenv",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-material-extensions"
]

[tool.ruff]
line-length = 99
